--- a/webfront/Dockerfile
+++ b/webfront/Dockerfile
@@ -1,6 +1,8 @@
-FROM mhart/alpine-node:base
+FROM node:slim
 
 WORKDIR /src
 ADD . .
 
 RUN npm install -g gulp-cli
+RUN npm install
+RUN gulp serve:production
