--- a/webfront/nginx.conf
+++ b/webfront/nginx.conf
@@ -5,15 +5,10 @@ events {
 #LOADBALANCER
 
 http {
-    upstream api {
-        server api_1:8080;
-    }
-
     server {
-        listen 8080;
-
+        listen 80;
         location / {
-            proxy_pass http://api;
+            root /www;
         }
     }
 }
