--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,19 @@ api:
   links:
     - db
 
+webfront:
+  image: nginx:alpine
+  volumes:
+    - ./webfront/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./webfront/build:/www
+  ports:
+    - "80:80"
+
 lbc:
   image: nginx:alpine
   volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf:ro
   ports:
-    - "80:80"
+    - "8080:8080"
   links:
     - api:api
