--- a/webfront/package.json
+++ b/webfront/package.json
@@ -10,10 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "*",
-    "gulp": "*",
+    "gulp": "^3.9.1",
     "gulp-inject": "*",
     "gulp-plumber": "*",
-    "gulp-serve": "*",
-    "wiredep": "*"
+    "gulp-serve": "*"
   }
 }
