--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,4 +19,13 @@ webfront:
     - ./webfront/nginx.conf:/etc/nginx/nginx.conf:ro
     - ./webfront/build:/www
   ports:
+    - "9000:9000"
+
+webcache:
+  image: nginx:alpine
+  volumes:
+    - ./webcache/nginx.conf:/etc/nginx/nginx.conf:ro
+  ports:
     - "80:80"
+  links:
+    - webfront
