--- a/webcache/nginx.conf
+++ b/webcache/nginx.conf
@@ -12,5 +12,10 @@ http {
             proxy_cache            STATIC;
             proxy_cache_valid      200  1d;
         }
+
+        location /api {
+            proxy_pass             http://api:8080/api;
+            proxy_set_header       Host $host;
+        }
     }
 }
