--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ webfront:
 proxy:
   image: nginx:alpine
   volumes:
-    - ./webcache/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
   ports:
     - "80:80"
   links:
