--- a/webfront/bower.json
+++ b/webfront/bower.json
@@ -18,6 +18,7 @@
     "angular": "angularjs#^1.5.7",
     "jquery": "^3.0.0",
     "semantic": "semantic-ui#^2.1.8",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angular-websocket": "^2.0.0"
   }
 }
