--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -4,6 +4,11 @@ events {
 
 http {
     proxy_cache_path /tmp/cache levels=1:2 keys_zone=STATIC:10m inactive=24h max_size=1g;
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+    
     server {
         listen 80;
         location / {
@@ -16,6 +21,14 @@ http {
         location /api {
             proxy_pass             http://api:8080/api;
             proxy_set_header       Host $host;
+        }
+
+        location /ws {
+            proxy_pass             http://api:8080/ws;
+            proxy_set_header       Host $host;
+            proxy_http_version     1.1;
+            proxy_set_header       Upgrade $http_upgrade;
+            proxy_set_header       Connection $connection_upgrade;
         }
     }
 }
