--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -10,7 +10,11 @@ http {
     }
 
     server {
-        listen 8800;
+        listen 443;
+        ssl on;
+        ssl_certificate /etc/nginx/ssl/server.crt;
+        ssl_certificate_key /etc/nginx/ssl/server.key;
+
         location / {
             proxy_pass             http://webfront:8801;
             proxy_set_header       Host $host;
@@ -20,6 +24,11 @@ http {
 
         location /api {
             proxy_pass             http://api:8802/api;
+            proxy_set_header       Host $host;
+        }
+
+        location /linebot {
+            proxy_pass             http://api:8802/linebot;
             proxy_set_header       Host $host;
         }
 
