--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ db:
 
 api:
   build: ./api
+  environment:
+    - CHANNEL_SECRET=d4a54c56a4711f297adc6f9e0eb1134d
+    - CHANNEL_TOKEN=0pu52f1adC4VUlyXAnVVb3+dVoeFgEyS3yqXUzkfdw6tr4diek24GQAa2JNLPRFiH8b6vmHDVCTGqKrpB1DcqcVaDtGHj9cE5acil1LzUWxoSRsrkJxFgRu7XMtOGmiwOj6c8SsjvXvKWxN2r1aSigdB04t89/1O/w1cDnyilFU=
   ports:
     - "8802:8802"
   volumes:
@@ -26,6 +29,8 @@ webfront:
 proxy:
   image: nginx:alpine
   volumes:
+    - /etc/letsencrypt/live/www.olipicus.com/fullchain.pem:/etc/nginx/ssl/server.crt:ro
+    - /etc/letsencrypt/live/www.olipicus.com/privkey.pem:/etc/nginx/ssl/server.key:ro
     - ./proxy/nginx.conf:/etc/nginx/nginx.conf:ro
   ports:
     - "8800:8800"
